--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 	    top: 0;
 	    width: 100%;
 	    text-align: center;
-	    height: 30px; /* Adjust the height value as needed */
+	    height: 40px; /* Original height value */
 	}
 	
 	.brand {
 	    display: inline-block;
 	    color: black;
 	    text-align: center;
-	    padding: 5px 16px; /* Adjust the padding values for the brand */
+	    padding: 10px 16px;
 	    margin-right: 20px;
 	    text-decoration: none;
 	    font-size: 17px;
@@ -70,7 +70,7 @@
 	    display: inline-block;
 	    color: black;
 	    text-align: center;
-	    padding: 5px 10px; /* Adjust the padding values for the navigation links */
+	    padding: 15px 16px;
 	    text-decoration: none;
 	    font-size: 17px;
 	    font-weight: bold;
