--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	    padding: 10px 16px;
 	    margin-right: 20px;
 	    text-decoration: none;
-	    font-size: 17px;
+	    font-size: 20px;
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
 	}
@@ -72,9 +72,9 @@
 	    text-align: center;
 	    padding: 15px 16px;
 	    text-decoration: none;
-	    font-size: 17px;
+	    font-size: 18px;
 	    font-weight: bold;
-	    font-family: 'Comic Sans MS', sans-serif;
+	    font-family: 'Arial', sans-serif;
 	}
 	    
         .navbar a:hover {
