--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	.image-container {
 	    position: relative;
 	    text-align: center;
-	    margin-top: 60px; /* Adjust the margin-top value as needed */
+	    margin-top: 60px; 
 	}
 	
 	.image-container img {
@@ -51,7 +51,7 @@
 	    top: 0;
 	    width: 100%;
 	    text-align: center;
-	    height: 40px; /* Original height value */
+	    height: 50px;
 	}
 	
 	.brand {
