--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	    top: 0;
 	    width: 100%;
 	    text-align: center;
-	    height: 50px;
+	    height: 55px;
 	}
 	
 	.brand {
@@ -73,7 +73,7 @@
 	    padding: 15px 16px;
 	    text-decoration: none;
 	    font-size: 18px;
-	    /*font-weight: bold;*/
+	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
 	}
 	    
