--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #34495E;
+            background-color: #5D6D7E;
             color: black;
             text-align: left;
         }
