--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #85929E;
+            background-color: #AED6F1;
             color: black;
             text-align: left;
         }
@@ -61,7 +61,7 @@
 	    padding: 10px 16px;
 	    margin-right: 20px;
 	    text-decoration: none;
-	    font-size: 22px;
+	    font-size: 26px;
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
 	}
