--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	    padding: 10px 16px;
 	    margin-right: 20px;
 	    text-decoration: none;
-	    font-size: 26px;
+	    font-size: 24px;
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
 	}
@@ -94,7 +94,7 @@
 <body>
 	
     <div class="image-container">
-        <img src="MAIN.jpg" alt="PROGETTI">
+        <img src="PRJ.jpg" alt="PROGETTI">
         <h1>Portfolio Progetti</h1>
     </div>
 	
