--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	    color: black;
 	    font-size: 62px;
 	    font-weight: bold;
-	    font-family: 'Pacifico', cursive;
+	    font-family: 'Comic Sans MS', sans-serif;
 	}
 	    
         .content {
