--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 	    transform: translate(-50%, -50%);
 	    color: black;
 	    font-size: 62px;
-	    font-weight: bold;
-	    font-family: 'Comic Sans MS', sans-serif;
+	    /*font-weight: bold;*/
+	    font-family: 'Arial', sans-serif;
 	}
 	    
         .content {
