--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	
     <div class="image-container">
         <img src="EXP.jpg" alt="PROGETTI">
-        <h1>PORTFOLIO PROGETTI</h1>
+        <h1>Portfolio Progetti</h1>
     </div>
 	
     <div class="navbar">
