--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #AED6F1;
+            background-color: #34495E;
             color: black;
             text-align: left;
         }
@@ -45,7 +45,7 @@
         }
 	    
 	.navbar {
-	    background-color: #34495E; 
+	    background-color: #000; 
 	    overflow: hidden;
 	    position: fixed;
 	    top: 0;
@@ -56,7 +56,7 @@
 	
 	.brand {
 	    display: inline-block;
-	    color: black;
+	    color: white;
 	    text-align: center;
 	    padding: 10px 16px;
 	    margin-right: 20px;
@@ -68,7 +68,7 @@
 	
 	.navbar a {
 	    display: inline-block;
-	    color: black;
+	    color: white;
 	    text-align: center;
 	    padding: 15px 16px;
 	    text-decoration: none;
