--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 	    
 	.navbar {
-	    background-color: #273746; 
+	    background-color: #17202A; 
 	    overflow: hidden;
 	    position: fixed;
 	    top: 0;
