--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	    text-decoration: none;
 	    font-size: 18px;
 	    font-weight: bold;
-	    font-family: 'Comic Sans MS', sans-serif;
+	    font-family: 'Lobster', cursive;
 	}
 	    
         .navbar a:hover {
