--- a/index.html
+++ b/index.html
@@ -108,16 +108,14 @@
     <div class="content">
         <br>
         <section>
-        <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse, si possono trovare tutti nell'archivio.</p>
-        <p>&emsp;&emsp;Mentre qui nella home, mostro l'ultimo in ordine cronologico.
-	</section>
-        <br>
-	<section>
-	<p>&emsp;&emsp;Ultima attività:	</p>
-	<p>&emsp;&emsp;> Dispositivo per il tracciamento di un robot via GPS</p>
-    	<img src="PRJ.jpg" alt="Immagine dell'ultimo progetto" class="project-image">
-	</section>
+        <p>&emsp;&emsp;Centralina Meteo</p>
+		<p>&emsp;&emsp;</p>
+		<p>&emsp;&emsp;Ora aggiornamento: "Timestamp"</p>
+		<p>&emsp;&emsp;Localita': "Dati GPS"</p>
+		<p>&emsp;&emsp;</p>
+		<p>&emsp;&emsp;Temperatura: "Temp"</p>
+		<p>&emsp;&emsp;Umidita': "Hum"</p>
     </div>
-	
 </body>
 </html>
+
