--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <section>
         <p>&emsp;&emsp;Centralina Meteo</p>
 		<p>&emsp;&emsp;</p>
+		<p>&emsp;&emsp;Sensore: "DHT11"</p>
 		<p>&emsp;&emsp;Ora aggiornamento: "Timestamp"</p>
 		<p>&emsp;&emsp;Localita': "Dati GPS"</p>
 		<p>&emsp;&emsp;</p>
@@ -118,4 +119,5 @@
     </div>
 </body>
 </html>
+
 
