--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
 	
     <div class="image-container">
-        <img src="EXP.jpg" alt="PROGETTI">
+        <img src="PRJ.jpg" alt="PROGETTI">
         <h1>Portfolio Progetti</h1>
     </div>
 	
@@ -119,5 +119,6 @@
     </div>
 </body>
 </html>
+
 
 
