--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	    
         .navbar a:hover {
             background-color: #ddd;
-            color: black;
+            color: white;
         }
 	    
 	.project-image {
@@ -96,10 +96,11 @@
     <div class="image-container">
         <img src="PRJ.jpg" alt="PROGETTI">
         <h1>Portfolio Progetti</h1>
+		<h1>by Grillo Edoardo</h1>
     </div>
 	
     <div class="navbar">
-	<span class="brand">Grillo Edoardo</span>
+	<span class="brand"></span>
         <a href="index.html">Home</a>
         <a href="archivio.html">Archivio</a>
         <a href="contatti.html">Contatti</a>
@@ -119,6 +120,7 @@
     </div>
 </body>
 </html>
+
 
 
 
