--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	    
         .navbar a:hover {
             background-color: #ddd;
-            color: white;
+            color: black;
         }
 	    
 	.project-image {
@@ -96,7 +96,7 @@
     <div class="image-container">
         <img src="PRJ.jpg" alt="PROGETTI">
         <h1>Portfolio Progetti</h1>
-		<h1>by Grillo Edoardo</h1>
+		<h2>by Grillo Edoardo</h2>
     </div>
 	
     <div class="navbar">
@@ -120,6 +120,7 @@
     </div>
 </body>
 </html>
+
 
 
 
