--- a/index.html
+++ b/index.html
@@ -33,12 +33,23 @@
 	    top: 20%;
 	    left: 50%;
 	    transform: translate(-50%, -50%);
-	    color: black;
+	    color: white;
 	    font-size: 62px;
 	    /*font-weight: bold;*/
 	    font-family: 'Arial', sans-serif;
 	}
-	    
+
+	.image-container h2 {
+	    position: absolute;
+	    top: 50%;
+	    left: 50%;
+	    transform: translate(-50%, -50%);
+	    color: white;
+	    font-size: 32px;
+	    /*font-weight: bold;*/
+	    font-family: 'Arial', sans-serif;
+	}
+		
         .content {
             margin: 20px;
             font-size: 20px;
@@ -120,6 +131,7 @@
     </div>
 </body>
 </html>
+
 
 
 
