--- a/index.html
+++ b/index.html
@@ -62,20 +62,27 @@
             font-weight: bold;
             font-family: 'Pacifico', cursive;
         }
+         .navbar {
+            background-color: #222;
+            overflow: hidden;
+            position: absolute;
+            top: 200px;
+            width: 100%;
+        }
         .navbar a {
-            display: inline-block;
+            float: left;
+            display: block;
             color: white;
             text-align: center;
-            padding: 15px 16px;
+            padding: 14px 16px;
             text-decoration: none;
-            font-size: 18px;
-            font-weight: bold;
-            font-family: 'Comic Sans MS', sans-serif;
+            font-size: 17px;
+	    font-weight: bold;
+	    font-family: 'Comic Sans MS', sans-serif;
         }
         .navbar a:hover {
             background-color: #ddd;
             color: black;
-        }
         .project-image {
             display: block;
             margin: 40px;
@@ -118,3 +125,4 @@
     </div>
 </body>
 </html>
+
