--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             text-align: left;
         }
         .image-container {
-            position: relative;
-            text-align: center;
-            margin-top: 60px; 
+		    width: 100%;
+		    height: 25vh;
+		    margin: 0 auto 
         }
         .image-container img {
             width: 100%;
@@ -125,4 +125,5 @@
     </div>
 </body>
 </html>
+
 
