--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #34495E;
-            color: black;
+            background-color: #334;
+            color: white;
             text-align: left;
         }
         .image-container {
-		    width: 100%;
-		    height: 25vh;
-		    margin: 0 auto 
+            position: relative;
+            text-align: center;
         }
         .image-container img {
             width: 100%;
@@ -32,7 +31,8 @@
             transform: translate(-50%, -50%);
             color: white;
             font-size: 62px;
-            font-family: 'Arial', sans-serif;
+            font-weight: bold;
+            font-family: 'Comic Sans MS', sans-serif;
         }
         .image-container h2 {
             position: absolute;
@@ -41,28 +41,9 @@
             transform: translate(-50%, -50%);
             color: white;
             font-size: 32px;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Comic Sans MS', sans-serif;
         }
         .navbar {
-            background-color: #17202A; 
-            overflow: hidden;
-            width: 100%;
-            text-align: center;
-            height: 60px;
-            margin-top: 0; /* Puoi aumentare se vuoi più spazio */
-        }
-        .brand {
-            display: inline-block;
-            color: white;
-            text-align: center;
-            padding: 10px 16px;
-            margin-right: 1200px;
-            text-decoration: none;
-            font-size: 24px;
-            font-weight: bold;
-            font-family: 'Pacifico', cursive;
-        }
-         .navbar {
             background-color: #222;
             overflow: hidden;
             position: absolute;
@@ -77,21 +58,25 @@
             padding: 14px 16px;
             text-decoration: none;
             font-size: 17px;
-	    font-weight: bold;
-	    font-family: 'Comic Sans MS', sans-serif;
+            font-weight: bold;
+            font-family: 'Comic Sans MS', sans-serif;
         }
         .navbar a:hover {
             background-color: #ddd;
             color: black;
-        .project-image {
-            display: block;
-            margin: 40px;
-            max-width: 50%;
-            height: auto; 
         }
         .content {
             margin: 20px;
             font-size: 20px;
+        }
+        footer {
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            text-align: right;
+            padding: 10px;
+            background-color: #334;
+            color: white;
         }
     </style>
 </head>
@@ -102,16 +87,14 @@
         <h2>by Grillo Edoardo</h2>
     </div>
 
-    <!-- Navbar spostata sotto l'immagine -->
     <div class="navbar">
-        <span class="brand"></span>
         <a href="index.html">Home</a>
         <a href="archivio.html">Archivio</a>
         <a href="contatti.html">Contatti</a>
     </div>
 
     <div class="content">
-        <br>
+        <br><br>
         <section>
             <p>&emsp;&emsp;Centralina Meteo</p>
             <p>&emsp;&emsp;</p>
@@ -124,6 +107,7 @@
         </section>
     </div>
 </body>
+<footer>
+    <p>Coded by Grillo Edoardo</p>
+</footer>
 </html>
-
-
