--- a/index.html
+++ b/index.html
@@ -78,15 +78,16 @@
     </div>
 
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="archivio.html">Archivio</a>
-        <a href="contatti.html">Contatti</a>
+        <a href="index.html">🏠</a>
+        <a href="contatti.html">⛅</a>
+        <a href="archivio.html">📁</a>
+        <a href="contatti.html">📬</a>
     </div>
 
     <div class="content">
         <br><br>
         <section>
-            <p>&emsp;&emsp;Centralina Meteo</p>
+            <p>&emsp;&emsp;Progetti in corso...</p>
             <p>&emsp;&emsp;</p>
             <p>&emsp;&emsp;Sensore: "DHT11"</p>
             <p>&emsp;&emsp;Ora aggiornamento: "Timestamp"</p>
@@ -101,4 +102,5 @@
     <p>Coded by Grillo Edoardo</p>
 </footer>
 </html>
+
 
