--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             width: 100%;
         }
         .navbar a {
-            float: left;
+            float: center;
             display: block;
             color: white;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
-            font-size: 17px;
+            font-size: 20px;
             font-weight: bold;
             font-family: 'Comic Sans MS', sans-serif;
         }
@@ -102,5 +102,6 @@
     <p>Coded by Grillo Edoardo</p>
 </footer>
 </html>
+
 
 
