--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             float: center;
             display: block;
             color: white;
-            text-align: center;
+            text-align: left;
             padding: 14px 16px;
             text-decoration: none;
             font-size: 20px;
@@ -102,6 +102,7 @@
     <p>Coded by Grillo Edoardo</p>
 </footer>
 </html>
+
 
 
 
