--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             width: 100%;
         }
         .navbar a {
-            float: center;
+            float: left;
             display: block;
             color: white;
-            text-align: left;
+            text-align: center;
             padding: 14px 16px;
             text-decoration: none;
-            font-size: 20px;
+            font-size: 30px;
             font-weight: bold;
             font-family: 'Comic Sans MS', sans-serif;
         }
@@ -102,6 +102,7 @@
     <p>Coded by Grillo Edoardo</p>
 </footer>
 </html>
+
 
 
 
