--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             position: absolute;
             top: 25vh;
             width: 100%;
+            height: auto;
             gap: 20px;
-            padding: 10px 0;
         }
 
         .navbar a {
@@ -56,7 +56,8 @@
             font-size: 30px;
             font-weight: bold;
             font-family: 'Comic Sans MS', sans-serif;
-            padding: 14px 16px;
+            line-height: 1; /* più compatto verticalmente */
+            padding: 6px 10px; /* ridotto ma leggibile */
         }
 
         .navbar a:hover {
@@ -69,10 +70,10 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 50vh;
+            min-height: 50vh;
             font-size: 20px;
             text-align: center;
-            margin-top: 30vh;
+            padding-top: 2vh; /* margine minimo per separare dalla navbar */
         }
 
         footer {
