--- a/index.html
+++ b/index.html
@@ -19,12 +19,23 @@
         .image-container {
             position: relative;
             text-align: center;
+            overflow: hidden;
         }
 
         .image-container img {
             width: 100%;
             height: 25vh;
-            margin: 0 auto;
+            object-fit: cover;
+        }
+
+        .image-container .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.4); /* Opacità dell'overlay */
+            z-index: 1;
         }
 
         .image-container h1 {
@@ -36,6 +47,7 @@
             font-size: 62px;
             font-weight: bold;
             font-family: 'Comic Sans MS', sans-serif;
+            z-index: 2;
         }
 
         .navbar {
@@ -56,8 +68,8 @@
             font-size: 30px;
             font-weight: bold;
             font-family: 'Comic Sans MS', sans-serif;
-            line-height: 1; /* più compatto verticalmente */
-            padding: 6px 10px; /* ridotto ma leggibile */
+            line-height: 1;
+            padding: 6px 10px;
         }
 
         .navbar a:hover {
@@ -73,7 +85,7 @@
             min-height: 50vh;
             font-size: 20px;
             text-align: center;
-            padding-top: 2vh; /* margine minimo per separare dalla navbar */
+            padding-top: 2vh;
         }
 
         footer {
@@ -90,6 +102,7 @@
 <body>
     <div class="image-container">
         <img src="PRJ.jpg" alt="PROGETTI">
+        <div class="overlay"></div>
         <h1>Portfolio Progetti</h1>
     </div>
 
