--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #334;
+            background-color: #76ADD6;
             color: white;
             text-align: center;
         }
@@ -34,7 +34,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.4); /* Opacità dell'overlay */
+            background-color: rgba(0, 0, 0, 0.5); /* Opacità dell'overlay */
             z-index: 1;
         }
 
@@ -129,3 +129,4 @@
     </footer>
 </body>
 </html>
+
