--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #76ADD6;
+            background-color: #103C60;
             color: white;
             text-align: center;
         }
@@ -129,4 +129,5 @@
     </footer>
 </body>
 </html>
+
 
