--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             right: 0;
             text-align: right;
             padding: 10px;
-            background-color: #334;
+            background-color: #103C60;
             color: white;
         }
     </style>
@@ -129,5 +129,6 @@
     </footer>
 </body>
 </html>
+
 
 
