--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Portfolio Progetti</title>
     <link rel="icon" type="image/ico" href="bulb.ico">
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -34,42 +38,43 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Opacità dell'overlay */
+            background-color: rgba(0, 0, 0, 0.5);
             z-index: 1;
         }
 
         .image-container h1 {
             position: absolute;
-            top: 20%;
+            top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             color: white;
-            font-size: 62px;
+            font-size: 8vw;
             font-weight: bold;
             font-family: 'Comic Sans MS', sans-serif;
             z-index: 2;
+            padding: 0 10px;
         }
 
         .navbar {
             background-color: #222;
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             align-items: center;
-            position: absolute;
-            top: 25vh;
+            position: relative;
+            top: 0;
             width: 100%;
-            height: auto;
-            gap: 20px;
+            gap: 10px;
+            padding: 10px 0;
         }
 
         .navbar a {
             color: white;
             text-decoration: none;
-            font-size: 30px;
+            font-size: 6vw;
             font-weight: bold;
             font-family: 'Comic Sans MS', sans-serif;
-            line-height: 1;
-            padding: 6px 10px;
+            padding: 5px 10px;
         }
 
         .navbar a:hover {
@@ -82,20 +87,37 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 50vh;
-            font-size: 20px;
+            padding: 20px 10px;
+            font-size: 5vw;
             text-align: center;
-            padding-top: 2vh;
         }
 
         footer {
-            position: fixed;
-            bottom: 0;
-            right: 0;
-            text-align: right;
+            position: static;
+            margin-top: 20px;
+            text-align: center;
             padding: 10px;
             background-color: #103C60;
             color: white;
+            font-size: 4vw;
+        }
+
+        @media (min-width: 768px) {
+            .image-container h1 {
+                font-size: 62px;
+            }
+
+            .navbar a {
+                font-size: 30px;
+            }
+
+            .content {
+                font-size: 20px;
+            }
+
+            footer {
+                font-size: 16px;
+            }
         }
     </style>
 </head>
@@ -129,6 +151,3 @@
     </footer>
 </body>
 </html>
-
-
-
