--- a/index.html
+++ b/index.html
@@ -1,184 +1,190 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=chrome">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Progetti</title>
-    <link rel="icon" type="image/ico" href="bulb.ico">
-    <style>
-        * {
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=chrome" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio Progetti</title>
+  <link rel="icon" type="image/ico" href="bulb.ico" />
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #103C60;
-            color: white;
-            text-align: center;
-        }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #103c60;
+      color: white;
+      text-align: center;
+    }
 
-        .image-container {
-            position: relative;
-            text-align: center;
-            overflow: hidden;
-        }
+    .image-container {
+      position: relative;
+      width: 100%;
+      height: 25vh;
+      overflow: hidden;
+    }
 
-        .image-container img {
-            width: 100%;
-            height: 25vh;
-            object-fit: cover;
-        }
+    .image-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-        .image-container .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 1;
-        }
+    .image-container .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
 
-        .image-container h1 {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            font-size: 8vw;
-            font-weight: bold;
-            font-family: 'Comic Sans MS', sans-serif;
-            z-index: 2;
-            padding: 0 10px;
-        }
+    .image-container h1 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 8vw;
+      font-weight: bold;
+      font-family: 'Comic Sans MS', sans-serif;
+      z-index: 2;
+      padding: 0 10px;
+    }
 
-        .hamburger {
-            display: none;
-            position: absolute;
-            top: 26vh;
-            right: 20px;
-            font-size: 8vw;
-            cursor: pointer;
-            z-index: 10;
-            color: white;
-        }
+    .hamburger {
+      display: block;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 8vw;
+      cursor: pointer;
+      z-index: 3;
+      color: white;
+    }
 
-        .navbar {
-            background-color: #222;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            position: relative;
-            top: 0;
-            padding: 10px 0;
-        }
+    .navbar {
+      background-color: #222;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      padding: 10px 0;
+      z-index: 2;
+    }
 
-        .navbar a {
-            color: white;
-            text-decoration: none;
-            font-size: 6vw;
-            font-weight: bold;
-            font-family: 'Comic Sans MS', sans-serif;
-            padding: 10px;
-            display: block;
-        }
+    .navbar.show {
+      display: flex;
+    }
 
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      font-size: 6vw;
+      font-weight: bold;
+      font-family: 'Comic Sans MS', sans-serif;
+      padding: 10px;
+      display: block;
+    }
 
-        .navbar.hidden {
-            display: none;
-        }
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
 
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 20px 10px;
-            font-size: 5vw;
-            text-align: center;
-        }
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 20px 10px;
+      font-size: 5vw;
+      text-align: center;
+    }
 
-        footer {
-            position: static;
-            margin-top: 20px;
-            text-align: center;
-            padding: 10px;
-            background-color: #103C60;
-            color: white;
-            font-size: 4vw;
-        }
+    footer {
+      position: static;
+      margin-top: 20px;
+      text-align: center;
+      padding: 10px;
+      background-color: #103c60;
+      color: white;
+      font-size: 4vw;
+    }
 
-        @media (min-width: 768px) {
-            .hamburger {
-                display: none;
-            }
+    /* Desktop styling */
+    @media (min-width: 768px) {
+      .hamburger {
+        display: none;
+      }
 
-            .navbar {
-                flex-direction: row;
-                justify-content: center;
-            }
+      .navbar {
+        display: flex !important;
+        flex-direction: row;
+        justify-content: center;
+      }
 
-            .navbar a {
-                font-size: 30px;
-                padding: 6px 10px;
-                display: inline-block;
-            }
+      .navbar a {
+        font-size: 30px;
+        padding: 6px 10px;
+        display: inline-block;
+      }
 
-            .image-container h1 {
-                font-size: 62px;
-            }
+      .image-container h1 {
+        font-size: 62px;
+      }
 
-            .content {
-                font-size: 20px;
-            }
+      .content {
+        font-size: 20px;
+      }
 
-            footer {
-                font-size: 16px;
-            }
-        }
-    </style>
+      footer {
+        font-size: 16px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="image-container">
-        <img src="PRJ.jpg" alt="PROGETTI">
-        <div class="overlay"></div>
-        <h1>Portfolio Progetti</h1>
-    </div>
-
-    <!-- Icona hamburger (solo su mobile) -->
+  <div class="image-container">
+    <img src="PRJ.jpg" alt="PROGETTI" />
+    <div class="overlay"></div>
+    <h1>Portfolio Progetti</h1>
+    <!-- Hamburger -->
     <div class="hamburger" onclick="toggleMenu()">☰</div>
+  </div>
 
-    <!-- Navbar -->
-    <div class="navbar hidden" id="navbar">
-        <a href="index.html">🏠</a>
-        <a href="contatti.html">⛅</a>
-        <a href="archivio.html">📁</a>
-        <a href="contatti.html">📬</a>
-    </div>
+  <!-- Navbar -->
+  <div class="navbar" id="navbar">
+    <a href="index.html">🏠</a>
+    <a href="contatti.html">⛅</a>
+    <a href="archivio.html">📁</a>
+    <a href="contatti.html">📬</a>
+  </div>
 
-    <div class="content">
-        <section>
-            <p>Progetti in corso...</p>
-            <p>Sensore: "DHT11"</p>
-            <p>Ora aggiornamento: "Timestamp"</p>
-            <p>Località: "Dati GPS"</p>
-            <p>Temperatura: "Temp"</p>
-            <p>Umidità: "Hum"</p>
-        </section>
-    </div>
+  <div class="content">
+    <section>
+      <p>Progetti in corso...</p>
+      <p>Sensore: "DHT11"</p>
+      <p>Ora aggiornamento: "Timestamp"</p>
+      <p>Località: "Dati GPS"</p>
+      <p>Temperatura: "Temp"</p>
+      <p>Umidità: "Hum"</p>
+    </section>
+  </div>
 
-    <footer>
-        <p>Coded by Grillo Edoardo</p>
-    </footer>
+  <footer>
+    <p>Coded by Grillo Edoardo</p>
+  </footer>
 
-    <script>
-        function toggleMenu() {
-            const navbar =
+  <script>
+    function toggleMenu() {
+      const navbar = document.getElementById('navbar');
+      navbar.classList.toggle('show');
+    }
+  </script>
+</body>
+</html>
