--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
       font-family: 'Comic Sans MS', sans-serif;
       z-index: 2;
       padding: 0 10px;
+      margin: 0;
+      width: auto;
+      max-width: 90%;
+      white-space: nowrap;
     }
 
     .hamburger {
@@ -134,8 +138,19 @@
         display: inline-block;
       }
 
+      .image-container {
+        height: 250px;
+      }
+
       .image-container h1 {
         font-size: 62px;
+        padding: 0;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: auto;
+        max-width: 90%;
+        white-space: nowrap;
       }
 
       .content {
