--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   <!-- Navbar -->
   <div class="navbar" id="navbar">
     <a href="index.html">🏠</a>
-    <a href="contatti.html">⛅</a>
+    <a href="stazione_meteo.html">⛅</a>
     <a href="archivio.html">📁</a>
     <a href="contatti.html">📬</a>
   </div>
@@ -183,11 +183,6 @@
   <div class="content">
     <section>
       <p>Progetti in corso...</p>
-      <p>Sensore: "DHT11"</p>
-      <p>Ora aggiornamento: "Timestamp"</p>
-      <p>Località: "Dati GPS"</p>
-      <p>Temperatura: "Temp"</p>
-      <p>Umidità: "Hum"</p>
     </section>
   </div>
 
@@ -203,3 +198,4 @@
   </script>
 </body>
 </html>
+
