--- a/contatti.html
+++ b/contatti.html
@@ -7,39 +7,53 @@
   <title>Contatti</title>
   <link rel="icon" type="image/ico" href="bulb.ico" />
   <style>
-    /* Inserisci qui lo stesso CSS della pagina principale */
-  </style>
-</head>
-<body>
-  <div class="image-container">
-    <img src="contatti.jpg" alt="Contatti" />
-    <div class="overlay"></div>
-    <h1>Contatti</h1>
-    <div class="hamburger" onclick="toggleMenu()">☰</div>
-  </div>
-  <div class="navbar" id="navbar">
-    <a href="index.html">🏠</a>
-    <a href="stazione_meteo.html">⛅</a>
-    <a href="archivio.html">📁</a>
-    <a href="contatti.html">📬</a>
-  </div>
-  <div class="content">
-    <section>
-      <p>Per informazioni o collaborazioni:</p>
-      <ul>
-        <li>Email: <a href="mailto:tuamail@example.com" style="color: #ffd700;">tuamail@example.com</a></li>
-        <li>LinkedIn: <a href="https://linkedin.com/in/tuonome" style="color: #ffd700;">Profilo LinkedIn</a></li>
-      </ul>
-    </section>
-  </div>
-  <footer>
-    <p>Coded by Grillo Edoardo</p>
-  </footer>
-  <script>
-    function toggleMenu() {
-      const navbar = document.getElementById('navbar');
-      navbar.classList.toggle('show');
+    * { box-sizing: border-box; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #103c60;
+      color: white;
+      text-align: center;
     }
-  </script>
-</body>
-</html>
+    .image-container {
+      position: relative;
+      width: 100%;
+      height: 25vh;
+      overflow: hidden;
+    }
+    .image-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .image-container .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+    .image-container h1 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 8vw;
+      font-weight: bold;
+      font-family: 'Comic Sans MS', sans-serif;
+      z-index: 2;
+      padding: 0 10px;
+      margin: 0;
+      width: auto;
+      max-width: 90%;
+      white-space: nowrap;
+    }
+    .hamburger {
+      display: block;
+      position: absolute;
+      top: 10px;
+      right: 20
