--- a/archivio.html
+++ b/archivio.html
@@ -7,7 +7,130 @@
   <title>Archivio Progetti</title>
   <link rel="icon" type="image/ico" href="bulb.ico" />
   <style>
-    /* Inserisci qui lo stesso CSS della pagina principale */
+    * { box-sizing: border-box; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #103c60;
+      color: white;
+      text-align: center;
+    }
+    .image-container {
+      position: relative;
+      width: 100%;
+      height: 25vh;
+      overflow: hidden;
+    }
+    .image-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .image-container .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+    .image-container h1 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 8vw;
+      font-weight: bold;
+      font-family: 'Comic Sans MS', sans-serif;
+      z-index: 2;
+      padding: 0 10px;
+      margin: 0;
+      width: auto;
+      max-width: 90%;
+      white-space: nowrap;
+    }
+    .hamburger {
+      display: block;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 8vw;
+      cursor: pointer;
+      z-index: 3;
+      color: white;
+    }
+    .navbar {
+      background-color: #222;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      padding: 10px 0;
+      z-index: 2;
+    }
+    .navbar.show {
+      display: flex;
+    }
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      font-size: 6vw;
+      font-weight: bold;
+      font-family: 'Comic Sans MS', sans-serif;
+      padding: 10px;
+      display: block;
+    }
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 20px 10px;
+      font-size: 5vw;
+      text-align: center;
+    }
+    footer {
+      position: static;
+      margin-top: 20px;
+      text-align: center;
+      padding: 10px;
+      background-color: #103c60;
+      color: white;
+      font-size: 4vw;
+    }
+    @media (min-width: 768px) {
+      .hamburger { display: none; }
+      .navbar {
+        display: flex !important;
+        flex-direction: row;
+        justify-content: center;
+      }
+      .navbar a {
+        font-size: 30px;
+        padding: 6px 10px;
+        display: inline-block;
+      }
+      .image-container { height: 250px; }
+      .image-container h1 {
+        font-size: 62px;
+        padding: 0;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: auto;
+        max-width: 90%;
+        white-space: nowrap;
+      }
+      .content { font-size: 20px; }
+      footer { font-size: 16px; }
+    }
   </style>
 </head>
 <body>
@@ -25,8 +148,8 @@
   </div>
   <div class="content">
     <section>
-      <p>Consulta l'archivio dei progetti completati e in corso.</p>
-      <ul>
+      <p>Consulta l'archivio dei progetti completati e in corso:</p>
+      <ul style="text-align:left; display:inline-block;">
         <li>Stazione Meteo</li>
         <li>Automazione Domestica</li>
         <li>App Web personali</li>
