--- a/contatti.html
+++ b/contatti.html
@@ -56,4 +56,114 @@
       display: block;
       position: absolute;
       top: 10px;
-      right: 20
+      right: 20px;
+      font-size: 8vw;
+      cursor: pointer;
+      z-index: 3;
+      color: white;
+    }
+    .navbar {
+      background-color: #222;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      padding: 10px 0;
+      z-index: 2;
+    }
+    .navbar.show {
+      display: flex;
+    }
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      font-size: 6vw;
+      font-weight: bold;
+      font-family: 'Comic Sans MS', sans-serif;
+      padding: 10px;
+      display: block;
+    }
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 20px 10px;
+      font-size: 5vw;
+      text-align: center;
+    }
+    footer {
+      position: static;
+      margin-top: 20px;
+      text-align: center;
+      padding: 10px;
+      background-color: #103c60;
+      color: white;
+      font-size: 4vw;
+    }
+    @media (min-width: 768px) {
+      .hamburger { display: none; }
+      .navbar {
+        display: flex !important;
+        flex-direction: row;
+        justify-content: center;
+      }
+      .navbar a {
+        font-size: 30px;
+        padding: 6px 10px;
+        display: inline-block;
+      }
+      .image-container { height: 250px; }
+      .image-container h1 {
+        font-size: 62px;
+        padding: 0;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: auto;
+        max-width: 90%;
+        white-space: nowrap;
+      }
+      .content { font-size: 20px; }
+      footer { font-size: 16px; }
+    }
+  </style>
+</head>
+<body>
+  <div class="image-container">
+    <img src="contatti.jpg" alt="Contatti" />
+    <div class="overlay"></div>
+    <h1>Contatti</h1>
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
+  </div>
+  <div class="navbar" id="navbar">
+    <a href="index.html">🏠</a>
+    <a href="stazione_meteo.html">⛅</a>
+    <a href="archivio.html">📁</a>
+    <a href="contatti.html">📬</a>
+  </div>
+  <div class="content">
+    <section>
+      <p>Per informazioni, richieste o collaborazioni puoi contattarmi qui:</p>
+      <ul style="text-align:left; display:inline-block;">
+        <li>Email: <a href="mailto:tuamail@example.com" style="color: #ffd700;">tuamail@example.com</a></li>
+        <li>LinkedIn: <a href="https://linkedin.com/in/tuonome" style="color: #ffd700;" target="_blank">Profilo LinkedIn</a></li>
+      </ul>
+      <p>Risponderò il prima possibile!</p>
+    </section>
+  </div>
+  <footer>
+    <p>Coded by Grillo Edoardo</p>
+  </footer>
+  <script>
+    function toggleMenu() {
+      const navbar = document.getElementById('navbar');
+      navbar.classList.toggle('show');
+    }
+  </script>
+</body>
+</html>
