--- a/stazione_meteo.html
+++ b/stazione_meteo.html
@@ -148,11 +148,27 @@
   </div>
   <div class="content">
     <section>
-      <p>Qui troverai informazioni e aggiornamenti sul progetto della stazione meteo.</p>
+      <p>Sensori utilizzati nella stazione meteo:</p>
       <ul style="text-align:left; display:inline-block;">
-        <li>Monitoraggio temperatura e umidità</li>
-        <li>Grafici in tempo reale</li>
-        <li>Storico dati</li>
+        <li>Bosh BMP280 Digital pressure & temperature sensor</li>
+        <p>Range: 0 - 20000 hPa</p>
+        <p>Absolute accuracy: ±1.7 hPa (-20 - 0 ℃) | ±1.0 hPa (0 - 65 ℃)</p>
+        <p></p>
+        <p>Range: -45 - +85 ℃</p>
+        <p>Absolute accuracy: ±0.5 ℃ (@25℃) | ±1.0 ℃ (0 - 65 ℃)</p>
+        <p></p>
+        <li>DHT11 Temperature & humidity sensor</li>
+        <p>Range: 0-50 ℃</p>
+        <p>Absolute accuracy: ±2 ℃</p>
+        <p></p>
+        <p>Range: 20 - 90% RH</p>
+        <p>Absolute accuracy: ±5％ RH </p>
+        <p></p>
+        <li>PMS7003 Digital universal particle concentration sensor</li>
+        <p>Range: 0.3~1.0；1.0~2.5；2.5~10 Micrometer（μ m)</p>
+        <p>Absolute accuracy: ±10% (100 - 500μ g/m³) | ±10μ g/m³ (0 - 100μ g/m³)</p>
+        <p>MTTF ≥3 Year（Y) (First startup August 2025)</p>
+        <p></p>
       </ul>
     </section>
   </div>
