--- a/archivio.html
+++ b/archivio.html
@@ -148,11 +148,11 @@
   </div>
   <div class="content">
     <section>
-      <p>Consulta l'archivio dei progetti completati e in corso:</p>
+      <p>Consulta l'archivio progetti completati:</p>
       <ul style="text-align:left; display:inline-block;">
         <li>Stazione Meteo</li>
-        <li>Automazione Domestica</li>
-        <li>App Web personali</li>
+        <li>PiHole</li>
+        <li>Citofono Smart</li>
       </ul>
     </section>
   </div>
