--- a/contatti.html
+++ b/contatti.html
@@ -148,10 +148,10 @@
   </div>
   <div class="content">
     <section>
-      <p>Per informazioni, richieste o collaborazioni puoi contattarmi qui:</p>
+      <p>Per informazioni, richieste o altro puoi contattarmi qui:</p>
       <ul style="text-align:left; display:inline-block;">
-        <li>Email: <a href="mailto:tuamail@example.com" style="color: #ffd700;">tuamail@example.com</a></li>
-        <li>LinkedIn: <a href="https://linkedin.com/in/tuonome" style="color: #ffd700;" target="_blank">Profilo LinkedIn</a></li>
+        <li>Email: <a href="mailto:edoardo23g@gmail.com" style="color: #ffd700;">edoardo23g@gmail.com</a></li>
+        <li>LinkedIn: <a href="www.linkedin.com/in/edoardo23g" style="color: #ffd700;" target="_blank">edoardo23g</a></li>
       </ul>
       <p>Risponderò il prima possibile!</p>
     </section>
