--- a/archivio.html
+++ b/archivio.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=chrome" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archivio Progetti</title>
-  <link rel="icon" type="image/ico" href="bulb.ico" />
+  <link rel="icon" type="image/ico" href="cricket.ico" />
   <style>
     * { box-sizing: border-box; }
     body {
