--- a/contatti.html
+++ b/contatti.html
@@ -151,7 +151,7 @@
       <p>Per informazioni, richieste o altro puoi contattarmi qui:</p>
       <ul style="text-align:left; display:inline-block;">
         <li>Email: <a href="mailto:edoardo23g@gmail.com" style="color: #ffd700;">edoardo23g@gmail.com</a></li>
-        <li>LinkedIn: <a href="www.linkedin.com/in/edoardo23g" style="color: #ffd700;" target="_blank">edoardo23g</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/edoardo23g" style="color: #ffd700;" target="_blank">edoardo23g</a></li>
       </ul>
       <p>Risponderò il prima possibile!</p>
     </section>
