--- a/stazione_meteo.html
+++ b/stazione_meteo.html
@@ -148,27 +148,43 @@
   </div>
   <div class="content">
     <section>
+      <p>Misure all'orario: "TIMESTAMP"</p>
+      <p>Pressione atmosferica</p>
+      <p>"PRESSIONE IN ATM"</p>
+      <p>Temperatura</p>
+      <p>"TEMPERATURA BMP280"</p>
+      <p>Umidità</p>
+      <p>"UMIDITA DHT11"</p>
+      <p>Particolato in μg/m³</p>
+      <p>"PARTICOLATO PM2.5"</p>
+      <p> </p>
+      <p>Grafico dell'andamento nell'ultima settimana</p>
+      <p>*Grafico in python di tutto*</p>
+      <p> </p>
       <p>Sensori utilizzati nella stazione meteo:</p>
       <ul style="text-align:left; display:inline-block;">
         <li>Bosh BMP280 Digital pressure & temperature sensor</li>
+        <p>Pressione</p>
         <p>Range: 0 - 20000 hPa</p>
         <p>Absolute accuracy: ±1.7 hPa (-20 - 0 ℃) | ±1.0 hPa (0 - 65 ℃)</p>
-        <p></p>
+        <p>Temperatura</p>
         <p>Range: -45 - +85 ℃</p>
         <p>Absolute accuracy: ±0.5 ℃ (@25℃) | ±1.0 ℃ (0 - 65 ℃)</p>
-        <p></p>
+        <p> </p>
         <li>DHT11 Temperature & humidity sensor</li>
+        <p>Temperatura</p>
         <p>Range: 0-50 ℃</p>
         <p>Absolute accuracy: ±2 ℃</p>
-        <p></p>
+        <p>Umidità</p>
         <p>Range: 20 - 90% RH</p>
         <p>Absolute accuracy: ±5％ RH </p>
-        <p></p>
+        <p> </p>
         <li>PMS7003 Digital universal particle concentration sensor</li>
+        <p>PPM</p>
         <p>Range: 0.3~1.0；1.0~2.5；2.5~10 Micrometer（μ m)</p>
         <p>Absolute accuracy: ±10% (100 - 500μ g/m³) | ±10μ g/m³ (0 - 100μ g/m³)</p>
         <p>MTTF ≥3 Year（Y) (First startup August 2025)</p>
-        <p></p>
+        <p> </p>
       </ul>
     </section>
   </div>
