--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=chrome" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio Progetti</title>
-  <link rel="icon" type="image/ico" href="cricket.ico" />
+  <link rel="icon" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f3e0.svg">
   <style>
     * {
       box-sizing: border-box;
@@ -198,5 +198,6 @@
   </script>
 </body>
 </html>
+
 
 
