--- a/stazione_meteo.html
+++ b/stazione_meteo.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=chrome" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stazione Meteo</title>
-  <link rel="icon" type="image/ico" href="cricket.ico" />
+  <link rel="icon" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/26c5.svg">
   <style>
     * { box-sizing: border-box; }
     body {
