--- a/stazione_meteo.html
+++ b/stazione_meteo.html
@@ -178,27 +178,22 @@
         <li>
           Bosh BMP280 Digital pressure & temperature sensor
           <ul>
-            <li>Pressione: Range 0 - 20000 hPa</li>
-            <li>Accuratezza assoluta: ±1.7 hPa (-20 - 0 ℃) | ±1.0 hPa (0 - 65 ℃)</li>
-            <li>Temperatura: Range -45 - +85 ℃</li>
-            <li>Accuratezza assoluta: ±0.5 ℃ (@25℃) | ±1.0 ℃ (0 - 65 ℃)</li>
-          </ul>
-        </li>
-        <li>
-          DHT11 Temperature & humidity sensor
-          <ul>
-            <li>Temperatura: Range 0 - 50 ℃</li>
-            <li>Accuratezza assoluta: ±2 ℃</li>
-            <li>Umidità: Range 20 - 90% RH</li>
-            <li>Accuratezza assoluta: ±5% RH</li>
+            <p>Pressione: Range 0 - 20000 hPa</p>
+            <p>Accuratezza assoluta: ±1.7 hPa (-20 - 0 ℃) | ±1.0 hPa (0 - 65 ℃)</p>
+            <p>Temperatura: Range -45 - +85 ℃</p>
+            <p>Accuratezza assoluta: ±0.5 ℃ (@25℃) | ±1.0 ℃ (0 - 65 ℃)</p>
+            <p>Umidità: Range </p>
+            <p>Accuratezza assoluta: </p>
+            <p>Altitudine: Range </p>
+            <p>Accuratezza assoluta: </p>
           </ul>
         </li>
         <li>
           PMS7003 Digital universal particle concentration sensor
           <ul>
-            <li>PPM: Range 0.3~1.0；1.0~2.5；2.5~10 μm</li>
-            <li>Accuratezza assoluta: ±10% (100 - 500 μg/m³) | ±10 μg/m³ (0 - 100 μg/m³)</li>
-            <li>MTTF ≥ 3 Anni (Primo avvio Agosto 2025)</li>
+            <p>PPM: Range 0.3~1.0；1.0~2.5；2.5~10 μm</p>
+            <p>Accuratezza assoluta: ±10% (100 - 500 μg/m³) | ±10 μg/m³ (0 - 100 μg/m³)</p>
+            <p>MTTF ≥ 3 Anni (Primo avvio Agosto 2025)</p>
           </ul>
         </li>
       </ul>
