--- a/stazione_meteo.html
+++ b/stazione_meteo.html
@@ -155,15 +155,14 @@
   <div class="content">
     <section>
       <div class="misure">
-        <p>Misure all'orario: "TIMESTAMP"</p>
-        <p>Pressione atmosferica</p>
-        <p>"PRESSIONE IN ATM"</p>
-        <p>Temperatura</p>
-        <p>"TEMPERATURA BMP280"</p>
-        <p>Umidità</p>
-        <p>"UMIDITA DHT11"</p>
-        <p>Particolato in μg/m³</p>
-        <p>"PARTICOLATO PM2.5"</p>
+        <p>Misure all'orario: </p>
+        <p>Pressione: </p>
+        <p>Temperatura: </p>
+        <p>Umidità: </p>
+        <p>Altitudine: </p>
+        <p>PPM <1.0: </p>
+        <p>PPM 2.5: </p>
+        <p>PPM 10: </p>
       </div>
     </section>
 
@@ -178,22 +177,27 @@
         <li>
           Bosh BMP280 Digital pressure & temperature sensor
           <ul>
-            <p>Pressione: Range 0 - 20000 hPa</p>
+            <p>| Pressione |</p>
+            <p>Range: 0 - 20000 hPa</p>
             <p>Accuratezza assoluta: ±1.7 hPa (-20 - 0 ℃) | ±1.0 hPa (0 - 65 ℃)</p>
-            <p>Temperatura: Range -45 - +85 ℃</p>
+            <p>| Temperatura |</p>
+            <p>Range: -45 - +85 ℃</p>
             <p>Accuratezza assoluta: ±0.5 ℃ (@25℃) | ±1.0 ℃ (0 - 65 ℃)</p>
-            <p>Umidità: Range </p>
+            <p>| Umidità |</p>
+            <p>Range: </p>
             <p>Accuratezza assoluta: </p>
-            <p>Altitudine: Range </p>
+            <p>| Altitudine |</p>
+            <p>Range: </p>
             <p>Accuratezza assoluta: </p>
           </ul>
         </li>
         <li>
           PMS7003 Digital universal particle concentration sensor
           <ul>
-            <p>PPM: Range 0.3~1.0；1.0~2.5；2.5~10 μm</p>
+            <p>PPM</p>
+            <p>Range: 0.3~1.0；1.0~2.5；2.5~10 μm</p>
             <p>Accuratezza assoluta: ±10% (100 - 500 μg/m³) | ±10 μg/m³ (0 - 100 μg/m³)</p>
-            <p>MTTF ≥ 3 Anni (Primo avvio Agosto 2025)</p>
+            <p>MTTF: ≥ 3 Anni (Primo avvio Agosto 2025)</p>
           </ul>
         </li>
       </ul>
