--- a/stazione_meteo.html
+++ b/stazione_meteo.html
@@ -155,6 +155,7 @@
   <div class="content">
     <section>
       <div class="misure">
+        <ul style="text-align:left; display:inline-block;">
         <p>Misure all'orario: </p>
         <p>Pressione: </p>
         <p>Temperatura: </p>
@@ -172,8 +173,8 @@
     </section>
 
     <section>
-      <p>Sensori utilizzati nella stazione meteo:</p>
       <ul style="text-align:left; display:inline-block;">
+        <p>Sensori utilizzati nella stazione meteo:</p>
         <li>
           Bosh BMP280 Digital pressure & temperature sensor
           <ul>
@@ -194,7 +195,7 @@
         <li>
           PMS7003 Digital universal particle concentration sensor
           <ul>
-            <p>PPM</p>
+            <p>| PPM |</p>
             <p>Range: 0.3~1.0；1.0~2.5；2.5~10 μm</p>
             <p>Accuratezza assoluta: ±10% (100 - 500 μg/m³) | ±10 μg/m³ (0 - 100 μg/m³)</p>
             <p>MTTF: ≥ 3 Anni (Primo avvio Agosto 2025)</p>
