--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     <img src="PRJ.jpg" alt="PROGETTI" />
     <div class="overlay"></div>
     <h1>Portfolio Progetti</h1>
+    <h1>di Grillo Edoardo</h1>
     <!-- Hamburger -->
     <div class="hamburger" onclick="toggleMenu()">☰</div>
   </div>
@@ -182,13 +183,15 @@
 
   <div class="content">
     <section>
-      <p>Progetti in corso...</p>
+      <p>Progetti in corso:</p>
+      <p>> Stazione meteo e qualita' dell'aria</p>
+      <p>  Sensore BME280 - In funzione</p>
+      <p>  Sensore PMS7003 - Scollegato</p>
+      <p>  </p>
+      <p>> Allarme garage LoRa</p>
+      <p>  </p>
     </section>
   </div>
-
-  <footer>
-    <p>Coded by Grillo Edoardo</p>
-  </footer>
 
   <script>
     function toggleMenu() {
@@ -198,6 +201,7 @@
   </script>
 </body>
 </html>
+
 
 
 
